# peru_gdp_revisions

./: .gitignore  README.md  environment.yml  requirements.txt
gdp_revisions_datasets/: .gitignore  .gitignore.txt  HOW_TO_TEST.md  README.md  TESTING_REPORT.md  Untitled.ipynb  WEEK1_COMPLETE.md  _Supplement.tex  aux_files_to_sql.ipynb  aux_files_to_sql_functions.py  base_year_df.xlsx  base_year_dummies_df.xlsx  benchmark_growth_rates_df.xlsx  benchmark_horizon.xlsx  drop_tables.sql  dummies_df.xlsx  gdp_datasets.ipynb  gdp_inter_revisions_datasets.ipynb  gdp_inter_revisions_datasets_functions.py  gdp_monthly_growth_rates_h.xlsx  gdp_revisions_datasets.ipynb  gdp_revisions_datasets_functions.py  gdp_rtd_pipeline.py  gdp_vintages_releases_datasets_functions.py  growth_rates_df.xlsx  input_growth_rates_df.xlsx  input_pdf - Acceso directo.lnk  input_seasonal_dummies_df.xlsx  int_ts_data.dta  merge_sector_inter_revision_datasets.sql  merge_sector_revision_datasets.sql  new_gdp_datasets.ipynb  new_gdp_datasets_functions.py  new_gdp_revisions_datasets.ipynb  new_gdp_revisions_datasets_functions.py  new_gdp_rtd.html  new_gdp_rtd.ipynb  new_gdp_rtd_pipeline.py  old_gdp_datasets.ipynb  old_gdp_datasets_functions.py  (+11 more)
gdp_revisions_datasets/.claude/: settings.local.json
gdp_revisions_datasets/.ipynb_checkpoints/: aux_files_to_sql-checkpoint.ipynb  gdp_dataset-checkpoint.ipynb  gdp_datasets-checkpoint.ipynb  gdp_inter_revisions_datasets-checkpoint.ipynb  gdp_revisions_datasets-checkpoint.ipynb  new_gdp_datasets-checkpoint.ipynb  new_gdp_rtd-checkpoint.ipynb  old_gdp_datasets-checkpoint.ipynb  old_gdp_revisions_datasets-checkpoint.ipynb  old_gdp_rtd-checkpoint.ipynb
gdp_revisions_datasets/_OLD_PROGRAMS/: aux_files_to_sql.ipynb  aux_files_to_sql_functions.py  cum_ts_data.dta  drop_tables.sql  gdp_revisions_datasets.ipynb  gdp_revisions_datasets_functions.py  merge_sector_revision_datasets.sql  merged_temp_panel_data.dta  run_gdp_revisions_datasets.py
gdp_revisions_datasets/_PROGRAMS/: gdp_revisions_datasets_functions.py
gdp_revisions_datasets/config/: config.yaml
gdp_revisions_datasets/dataframes_record/: carpetas_procesadas.txt  carpetas_procesadas_1.txt  carpetas_procesadas_2.txt  new_processed_folders_1.txt  new_processed_folders_2.txt  old_carpetas_procesadas_1.txt  old_processed_folders_1.txt  old_processed_folders_2.txt  processed_folders_2.txt
gdp_revisions_datasets/download_record/: downloaded_files.txt
gdp_revisions_datasets/gdp_perc_structure/: gdp_percentage_structure.csv
gdp_revisions_datasets/input_pdf_record/: input_pdf_record.txt
gdp_revisions_datasets/metadata/: wr_metadata.csv
gdp_revisions_datasets/ns_base_year/: base_year.csv
gdp_revisions_datasets/ns_dates/: dates.csv
gdp_revisions_datasets/peru_gdp_rtd/: __init__.py
(+1819 files in other folders)
