[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "peru-gdp-rtd"
version = "1.0.0"
description = "Peru GDP Real-Time Dataset Construction Pipeline"
readme = "README.md"
authors = [
    {name = "Jason Cruz", email = "jj.cruza@up.edu.pe"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
    "PyMuPDF>=1.23.0",
    "PyPDF2>=3.0.0",
    "tabula-py>=2.8.0",
    "pygame>=2.5.0",
    "python-roman>=4.0",
    "tqdm>=4.65.0",
    "ipywidgets>=8.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
]
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/JasonCruz18/peru_gdp_revisions"
Documentation = "https://github.com/JasonCruz18/peru_gdp_revisions/tree/main/docs"
Repository = "https://github.com/JasonCruz18/peru_gdp_revisions"
Issues = "https://github.com/JasonCruz18/peru_gdp_revisions/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["peru_gdp_rtd*"]
exclude = ["tests*", "docs*", "notebooks*", "_OLD_PROGRAMS*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | _build
  | build
  | dist
  | _OLD_PROGRAMS
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["peru_gdp_rtd"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["_OLD_PROGRAMS", ".venv", "venv"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=peru_gdp_rtd --cov-report=html --cov-report=term-missing"
